# radolc

./: .Rbuildignore  .gitignore  CONTRIBUTING.md  DESCRIPTION  LICENSE  NEWS.md  README.md  adolc.R  adolc_constructor.R  adolc_dispatch.R  adolc_summary.R  cleanup  cran-comments.md  init_adolc.R  rosenbrock_bivariate_optim1.r  rosenbrock_bivariate_optim2.r  rosenbrock_univariate_optim.r  test.R
R/: adolc.R
RFiles/: init_adolc.R
autodiffadolc/: DESCRIPTION  NAMESPACE  cleanup  cleanup.win  configure.ac
autodiffadolc/R/: adolc.R  adolc_constructor.R
autodiffadolc/man/: badouble_declareDependent.Rd  badouble_declareIndependent.Rd  gradient.Rd  hess_mat.Rd  hessian.Rd  jacobian.Rd  trace_off.Rd  trace_on.Rd  vec_jac.Rd
autodiffadolc/src/: Makevars.in  Makevars.win
autodiffadolc/src/ADOLC/: Makefile
autodiffadolc/src/ColPack/: Makefile
autodiffadolc/tests/: hess_mat.r  hess_vec.r  hessian.r  jac_vec.r  jacobian.r  rosenbrock_bivariate_optim1.r  rosenbrock_bivariate_optim2.r  rosenbrock_univariate_optim.r  vec_jac.r
autodiffadolc/vignettes/: ad.bib  ad.tex  autodiffadolc.Rmd
man/: adolc_createList.Rd  badouble_declareDependent.Rd  badouble_declareIndependent.Rd  gradient.Rd  hess_mat.Rd  hess_vec.Rd  hessian.Rd  jac_vec.Rd  jacobian.Rd  trace_off.Rd  trace_on.Rd  vec_jac.Rd
radolc/: DESCRIPTION  NAMESPACE  configure  configure.ac
radolc/R/: adolc.R
src/: Makevars.in  Makevars.win  adolc.R  adolc_r_wrap.cpp
tests/: gradient.r  jac_vec.r  jacobian.r  rosenbrock_bivariate_optim1.r  rosenbrock_univariate_optim.r  vec_jac.r
vignettes/: radolc.Rmd
(+18 files in other folders)
